# backoff

./: .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  404.html  CHANGELOG.md  README.rst  index.html  mkdocs.yml  objects.inv  pyproject.toml  renovate.json  zensical.toml
.github/: CODEOWNERS
.github/workflows/: build.yaml  ci.yaml  codeql-analysis.yaml  codeql-analysis.yml  docs.yml  run-zizmor.yaml
advanced/combining-decorators/: index.html
advanced/custom-strategies/: index.html
advanced/runtime-config/: index.html
api/reference/: index.html
backoff/: __init__.py  _async.py  _common.py  _decorator.py  _sync.py  _typing.py  _wait_gen.py  types.py
docs/: examples.md  faq.md  getting-started.md  index.md
docs/advanced/: combining-decorators.md  custom-strategies.md  runtime-config.md
docs/api/: reference.md
docs/user-guide/: async.md  configuration.md  decorators.md  event-handlers.md  logging.md  wait-strategies.md
examples/: index.html
faq/: index.html
getting-started/: index.html
requirements/: docs.requirements.txt
search/: search_index.json
snippets/: ruff.toml
snippets/examples/: 001_basic.py  002_retry_after.py  003_status_code.py
tests/: common.py  test_backoff.py  test_backoff_async.py  test_integration.py  test_jitter.py  test_package.py  test_types.py  test_typing.py  test_wait_gen.py
user-guide/async/: index.html
user-guide/configuration/: index.html
user-guide/decorators/: index.html
user-guide/event-handlers/: index.html
user-guide/logging/: index.html
user-guide/wait-strategies/: index.html
