[project]
name = "backoff"
version = "2.2.1"
description = "Function decoration for backoff and retry"
authors = [{ name = "Bob Green", email = "rgreen@aquent.com" }]
maintainers = [{ name = "Edgar Ramírez-Mondragón", email = "edgarrm358@gmail.com" }]
requires-python = ">=3.7"
readme = "README.rst"
license = "MIT"
keywords = [
    "retry",
    "backoff",
    "decorators",
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Programming Language :: Python",
    "License :: OSI Approved :: MIT License",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Internet :: WWW/HTTP",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Utilities",
]

[project.urls]
Repository = "https://github.com/python-backoff/backoff"

[dependency-groups]
dev = [
    { include-group = "tests" },
    "flake8>=4.0.1",
    "mypy>=0.942",
    "types-requests>=2.27.20",
]
tests = [
    "coverage>=7.2.7",
    "pytest>=7.1.2",
    "pytest-asyncio>=0.18.3",
    "requests>=2.26.0",
    "responses>=0.20.0",
]

[tool.hatch.build.targets.sdist]
include = ["backoff"]

[tool.hatch.build.targets.wheel]
include = ["backoff"]

[tool.tox]
min_version = "4.22"
requires = [ "tox", "tox-uv" ]
env_list = [
  "3.7",
  "3.8",
  "3.9",
  "3.10",
  "3.11",
  "3.12",
  "3.13",
  "3.14",
]

[tool.tox.env_run_base]
description = "run unit tests"
dependency_groups = [ "tests" ]
commands = [ [ "coverage", "run", "-m", "pytest", { replace = "posargs", default = [ "tests" ], extend = true } ] ]

[tool.tox.env.coverage]
description = "generate coverage report"
depends = [
  "3.7",
  "3.8",
  "3.9",
  "3.10",
  "3.11",
  "3.12",
  "3.13",
  "3.14",
]
dependency_groups = [ "tests" ]
commands = [
  [ "coverage", "combine" ],
  [ "coverage", "report" ],
  [ "coverage", "xml" ],
]

[tool.pytest.ini_options]
filterwarnings = [
    "error",
]

[tool.coverage.paths]
package = [
  "backoff/",
  "*/site-packages/backoff/",
]

[tool.coverage.report]
fail_under = 100
show_missing = true

[tool.coverage.run]
branch = true
parallel = true
relative_files = true
source = [
  "backoff",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
