[project]
name = "backoff"
version = "2.2.1"
description = "Function decoration for backoff and retry"
authors = [{ name = "Bob Green", email = "rgreen@aquent.com" }]
maintainers = [{ name = "Edgar Ramírez-Mondragón", email = "edgarrm358@gmail.com" }]
requires-python = ">=3.7"
readme = "README.rst"
license = "MIT"
keywords = [
    "retry",
    "backoff",
    "decorators",
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Programming Language :: Python",
    "License :: OSI Approved :: MIT License",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Programming Language :: Python :: 3.15",
    "Topic :: Internet :: WWW/HTTP",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Utilities",
]

[project.urls]
Repository = "https://github.com/python-backoff/backoff"

[dependency-groups]
dev = [
    { include-group = "lint" },
    { include-group = "test" },
    { include-group = "typing" },
]
lint = [
    "ruff>=0.12.9",
]
test = [
    "coverage>=7.2.7",
    "pytest>=7.1.2",
    "pytest-asyncio>=0.18.3",
    "requests>=2.26.0",
    "responses>=0.20.0",
]
typing = [
    { include-group = "test" },
    "mypy>=0.942",
    "types-requests>=2.27.20",
]

[tool.hatch.build.targets.sdist]
include = ["backoff", "tests"]

[tool.hatch.build.targets.wheel]
include = ["backoff"]

[tool.tox]
min_version = "4.22"
requires = [ "tox", "tox-gh", "tox-uv" ]
env_list = [
  "format",
  "3.7",
  "3.8",
  "3.9",
  "3.10",
  "3.11",
  "3.12",
  "3.13",
  "3.14",
  "3.15",
  "coverage",
  "lint",
  "typing",
]

[tool.tox.env_run_base]
description = "run unit tests"
dependency_groups = [ "test" ]
commands = [
    [ "coverage", "run", "-m", "pytest", { replace = "posargs", default = [ "tests" ], extend = true } ],
]

[tool.tox.env.coverage]
description = "generate coverage report"
depends = [
  "3.7",
  "3.8",
  "3.9",
  "3.10",
  "3.11",
  "3.12",
  "3.13",
  "3.14",
  "3.15",
]
dependency_groups = [ "test" ]
commands = [
  [ "coverage", "combine" ],
  [ "coverage", "report" ],
  [ "coverage", "xml" ],
]

[tool.tox.env.format]
description = "format code"
dependency_groups = [ "lint" ]
commands = [
    [ "ruff", "check", "--fix", { replace = "posargs", default = [ "backoff", "tests" ], extend = true } ],
]

[tool.tox.env.lint]
description = "lint code"
dependency_groups = [ "lint" ]
commands = [
    [ "ruff", "check", { replace = "posargs", default = [ "backoff", "tests" ], extend = true } ],
]

[tool.tox.env.typing]
description = "run type checking"
dependency_groups = [ "typing" ]
commands = [
  [
    "mypy",
    "--show-error-codes",
    { replace = "posargs", default = [
      "backoff",
      "tests",
    ], extend = true },
  ],
]

[tool.tox.gh.python]
"3.15" = ["3.15"]
"3.14" = ["3.14", "lint", "typing"]
"3.13" = ["3.13"]
"3.12" = ["3.12"]
"3.11" = ["3.11"]
"3.10" = ["3.10"]
"3.9" = ["3.9"]
"3.8" = ["3.8"]
"3.7" = ["3.7"]

[tool.pytest.ini_options]
filterwarnings = [
    "error",
]

[tool.coverage.paths]
package = [
  "backoff/",
  "*/site-packages/backoff/",
]

[tool.ruff]
line-length = 88

[tool.coverage.report]
fail_under = 100
show_missing = true

[tool.coverage.run]
branch = true
parallel = true
relative_files = true
source = [
  "backoff",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
