[project]
name = "python-backoff"
version = "2.3.1"
description = "Function decoration for backoff and retry"
authors = [{ name = "Bob Green", email = "rgreen@aquent.com" }]
maintainers = [{ name = "Edgar Ramírez-Mondragón", email = "edgarrm358@gmail.com" }]
requires-python = ">=3.8"
readme = "README.rst"
license = "MIT"
keywords = [
    "retry",
    "backoff",
    "decorators",
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Programming Language :: Python :: 3.15",
    "Topic :: Internet :: WWW/HTTP",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Utilities",
]

[project.urls]
Documentation = "https://python-backoff.github.io/backoff"
Repository = "https://github.com/python-backoff/backoff"

[dependency-groups]
dev = [
    { include-group = "docs" },
    { include-group = "lint" },
    { include-group = "test" },
    { include-group = "typing" },
]
docs = [
    "mkdocstrings[python]~=0.30.1",
    "zensical==0.0.20",
]
lint = [
    "ruff>=0.12.9",
]
test = [
    "coverage>=7.2.7",
    "importlib-metadata>=8.5.0",
    "packaging>=25.0",
    "pytest>=7.1.2",
    "pytest-asyncio>=0.18.3",
    "requests>=2.26.0",
    "responses>=0.20.0",
    "tomli>=2.3.0",
]
typing = [
    { include-group = "test" },
    "mypy>=0.942",
    "types-requests>=2.27.20",
]

[tool.hatch.build.targets.sdist]
include = ["backoff", "tests"]

[tool.hatch.build.targets.wheel]
include = ["backoff"]

[tool.tox]
min_version = "4.22"
requires = [ "tox", "tox-gh", "tox-uv" ]
env_list = [
  "format",
  "3.8",
  "3.9",
  "3.10",
  "3.11",
  "3.12",
  "3.13",
  "3.14",
  "3.15",
  "coverage",
  "lint",
  "typing",
  "docs",
]

[tool.tox.env_run_base]
description = "run unit tests"
dependency_groups = [ "test" ]
commands = [
    [ "coverage", "run", "-m", "pytest", { replace = "posargs", default = [ "tests" ], extend = true } ],
]

[tool.tox.env.coverage]
description = "generate coverage report"
depends = [
  "3.8",
  "3.9",
  "3.10",
  "3.11",
  "3.12",
  "3.13",
  "3.14",
  "3.15",
]
dependency_groups = [ "test" ]
commands = [
  [ "coverage", "combine" ],
  [ "coverage", "report" ],
  [ "coverage", "xml" ],
]

[tool.tox.env.format]
description = "format code"
dependency_groups = [ "lint" ]
commands = [
    [ "ruff", "check", "--fix", { replace = "posargs", default = [ "backoff", "tests" ], extend = true } ],
    # [ "ruff", "format", { replace = "posargs", default = [ "backoff", "tests" ], extend = true } ],
]

[tool.tox.env.lint]
description = "lint code"
dependency_groups = [ "lint" ]
commands = [
    [ "ruff", "check", { replace = "posargs", default = [ "backoff", "tests" ], extend = true } ],
]

[tool.tox.env.typing]
description = "run type checking"
dependency_groups = [ "typing" ]
commands = [
  [
    "mypy",
    "--show-error-codes",
    { replace = "posargs", default = [
      "backoff",
      "tests",
    ], extend = true },
  ],
]

[tool.tox.env.docs]
description = "build the documentation"
deps = [ "-r ./requirements/docs.requirements.txt" ]
commands = [
    [ "zensical", { replace = "posargs", default = [ "build" ], extend = true } ],
]

[tool.tox.gh.python]
"3.15" = ["3.15"]
"3.14" = ["3.14", "lint", "typing"]
"3.13" = ["3.13"]
"3.12" = ["3.12"]
"3.11" = ["3.11"]
"3.10" = ["3.10"]
"3.9" = ["3.9"]
"3.8" = ["3.8"]

[tool.pytest.ini_options]
filterwarnings = [
    "error",
]

[tool.coverage.paths]
package = [
  "backoff/",
  "*/site-packages/backoff/",
]

[tool.ruff]
line-length = 88

[tool.ruff.format]
docstring-code-format = true
docstring-code-line-length = 20

[tool.ruff.lint]
extend-select = [
  "RET",  # flake8-return
  "SIM",  # flake8-simplify
  "UP",   # pyupgrade
]
ignore = [
  # converting to a `yield from` expression is not safe because this library sends values via `send`
  # https://docs.astral.sh/ruff/rules/yield-in-for-loop/#fix-safety
  "UP028",
]

[tool.ruff.lint.per-file-ignores]
"**/doccmd_*.py" = [
  "F811",  # redefinition of unused
  "F821",  # undefined name
]

[tool.coverage.report]
fail_under = 100
show_missing = true

[tool.coverage.run]
branch = true
parallel = true
relative_files = true
source = [
  "backoff",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
